# amigo_footsies

godot/: Botsies.csproj  battle_scene.gd  battle_scene.tscn  bot_selfplay.tscn  custom_message_serializer.gd  custom_message_serializer.gd.uid  default_bus_layout.tres  export_presets.cfg  footsies_sim.gdextension  main_menu.gd  main_menu.gd.uid  main_menu.tscn  play_against_bot.tscn  player_input_dummy.gd  player_input_dummy.gd.uid  project.godot  pvp.tscn  steam_controller.gd  steam_controller.gd.uid
godot/addons/godot-rollback-netcode/: DebugStateComparer.gd.uid  DummyNetworkAdaptor.gd.uid  HashSerializer.gd.uid  Logger.gd.uid  MessageSerializer.gd  MessageSerializer.gd.uid  NakamaWebRTCNetworkAdaptor.gd.uid  NetworkAdaptor.gd.uid  NetworkAnimationPlayer.gd.uid  NetworkRandomNumberGenerator.gd.uid  NetworkTimer.gd.uid  Plugin.gd.uid  ProjectSettings.gd.uid  RPCNetworkAdaptor.gd.uid  SoundManager.gd.uid  SpawnManager.gd  SpawnManager.gd.uid  SyncDebugger.gd.uid  SyncManager.gd  SyncManager.gd.uid  SyncReplay.gd.uid  log2json.gd.uid
godot/addons/godotsteam/: godotsteam.gdextension.uid
godot/addons/steam-multiplayer-peer/: steam-multiplayer-peer.gdextension.uid
godot/audio/: bg.ogg.import
godot/scripts/: battle_scene.gd  constants.gd  constants.gd.uid  custom_message_serializer.gd  main_menu.gd  player_input_dummy.gd  steam_manager.gd  steam_network_adapter.gd  steam_network_adapter.gd.uid
rust/: Cargo.toml  new_release.sh
rust/.cargo/: config.toml
rust/src/: cbox.rs  framedata.rs  input.rs  lib.rs  player.rs  simul.rs  timer.rs
(+17 files in other folders)
