[package]
name = "footsies_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
godot = "0.2.4"
ron = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
steamworks = "0.11.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.
